5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1747_3090.log
== TEST (2019-05-16 11:06:20) 
-- CODE:
t=0
s=0
while(t!=0):
	t=input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- OUTPUT:
0.1823306667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:04) 
-- CODE:
t=
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 1
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:09) 
-- CODE:
t=0
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 5
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:16) 
-- CODE:
t=0
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 5
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:33) 
-- CODE:
t=0
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 5
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:59) 
-- CODE:
t=int(input("para onde a lagartixa vai? ")
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:00) 
-- CODE:
t=int(input("para onde a lagartixa vai? ")
s=0
while(t!=0):
	t=int(input("para onde a lagartixa vai? ")
	s=s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:39) 
-- CODE:
t=0
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 6
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:48) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 6
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:56) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s==+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 6
    s==+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:25) 
-- CODE:
t=int(input("para onde a lagartixa vai?")
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:35) 
-- CODE:
t=int(input("para onde a lagartixa vai?")
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:21) 
-- CODE:
t=int(input("para onde lagartixa vai")
s=0

while(t!=0)
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 2
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:31) 
-- CODE:
t=int(input("para onde lagartixa vai"))
s=0

while(t!=0)
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 4
    while(t!=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:38) 
-- CODE:
t=int(input("para onde lagartixa vai"))
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(t>0):
		print("acima")
	if(t<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 6
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:12) 
-- CODE:
t=int(input("para onde lagartixa vai"))
s=0

while(t!=0):
	t=int(input("para onde a lagartixa vai?")
	s=s+t
	if(s>0):
		print("acima")
	if(s<0):
		print("abaixo")
	
-- ERROR:
File "XXXX", line 6
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:12) 
-- CODE:
t=0
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
	print(s)
	
-- ERROR:
File "XXXX", line 6
    s=s+t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:20) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
	print(s)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
19
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:44) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
	print(s)
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
19
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:30) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- OUTPUT:
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:45:42) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
	if(s<0):
		print("Abaixo")
	if(s>0):
		print("Acima")
	
-- EXECUTION TIME:
0.125847
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
Abaixo
Abaixo
Abaixo
Abaixo
Abaixo
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
Acima
Acima
Acima
Acima
Acima
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:01) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
	
-- OUTPUT:
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:46:27) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
	
-- EXECUTION TIME:
0.160302
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:37) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
print(s)
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
	
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:46:43) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
print(s)
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
	
-- EXECUTION TIME:
0.135346
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
19
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
-25
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:46) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
print(s)
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
	
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:47:08) 
-- CODE:
t=1
s=0

while(t!=0):
	t=int(input("qual a direcaod da lagartixa? "))
	s= s+t
print(s)
if(s<0):
	print("Abaixo")
if(s>0):
	print("Acima")
if(s==0):
	print("Inicial")
	
-- EXECUTION TIME:
0.167951
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
19
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
-25
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
